Fixed navbar link spacing

--- a/dev/css/styles.css
+++ b/dev/css/styles.css
@@ -382,7 +382,7 @@ form .button-wrapper {
     #navbar .nav div, #navbar .nav a.menu {
       display: table-cell;
       padding-right: 12px;
-      width: 80px;
+      padding-left: 12px;
       text-align: center; }
       #navbar .nav div li, #navbar .nav a.menu li {
         padding: 0px; }
